agency-v1/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agency-v1
  labels:
    istio-injection: enabled
    environment: production
